<resources>
    <string name="app_name">Co-ordinator</string>
    <string name="stu_dob">DOB</string>
    <string name="hint_email">Email</string>
    <string name="reg_gender">Gender</string>
    <string name="string_name">Name</string>
    <string name="gender_male">Male</string>
    <string name="gender_m">M</string>
    <string name="gender_female">Female</string>
    <string name="gender_f">F</string>
    <string name="gender_tg">O</string>
    <string name="hint_assessment">Nature of Assessment</string>
    <string name="stu_roll_number">Roll Number</string>
    <string name="hint_contact_number">Contact Number(10 digit)</string>
    <string name="hint_doctor_experience">Experience</string>
    <string name="hint_doctor_mci">MCI Number</string>
    <string name="hint_signature">Signature</string>
    <string name="hint_qualification">Qualification</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="doctor">Doctor</string>
    <string name="student">Student</string>
    <string name="qrcode">Qr Code</string>
    <string name="click">Click</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="stu_class">Class</string>
    <string name="stu_section">Section</string>
    <string name="parents_name">Parents Name</string>
    <string-array name="qualification_arrays">
        <item>MBBS</item>
        <item>BDS</item>
        <item>MD</item>
        <item>MS</item>
        <item>MS Optha</item>
        <item>BSE Optometrist</item>
        <item>Optometrist</item>
        <item>MDS</item>
        <item>Paramedic</item>
    </string-array>
    <string-array name="student_relation_arrays">
        <item>Father</item>
        <item>Mother</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>M</item>
        <item>F</item>
        <item>O</item>
    </string-array>
    <string-array name="assessment_arrays">
        <item>Growth</item>
        <item>Physical</item>
        <item>Dental</item>
        <item>Eye</item>
        <item>Other</item>
    </string-array>
    <string-array name="specialization_arrays">
        <item>MBBS</item>
        <item>BMBS</item>
        <item>DCM</item>
        <item>DMCS</item>
        <item>Physician</item>
    </string-array>
    <string-array name="student_class_array">
        <item>TODDLER</item>
        <item>PRE-NURSERY</item>
        <item>NURSERY</item>
        <item>LKG</item>
        <item>UKG</item>
        <item>KG</item>
        <item>PRE-KINDER</item>
        <item>KINDER</item>
        <item>PREPA</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
        <item>IX</item>
        <item>X</item>
        <item>XI</item>
        <item>XII</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="admission_no">Admission Number</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="parent">Add \n Parent</string>
    <string name="assessment">Start Assessment</string>
    <string name="parent_detail">Parent Details</string>
    <string name="student_profile">Profile</string>
    <string name="student_assessment">Assessment</string>
    <string name="reg_admission_number">Admission Number</string>
    <string name="hygiene">Hygiene</string>
    <string name="hands_and_nails">Hands and Nails</string>
    <string name="hair">Hair</string>
    <string name="general_signs">General Signs</string>
    <string name="pallor">Pallor</string>
    <string name="cyanosis">Cyanosis</string>
    <string name="anemia">Anemia</string>
    <string name="clubbing">Clubbing</string>
    <string name="edema">Edema</string>
    <string name="password">Password</string>
    <string name="user_id">User Id</string>
    <string name="user_id__">User Id___</string>
    <string name="assessment_id">Assessment Id</string>
    <string name="save_cont">Save and Continue</string>
    <string name="log_out">Logout</string>
    <string name="upload">Upload</string>
    <string name="copy">Data Copy</string>
    <string name="list_refresh">Refresh Student List</string>
    <string name="upload_status_string">Upload Status</string>
    <string name="finish_assessment_string">Assessment Done</string>
    <string name="user_id_hint">test@gmail.com</string>
    <string name="incorrect_username_password">Incorrect Username/Password</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="reg_required_field">Please fill all required field</string>
    <string name="toolbar_title">HSG COORDINATOR</string>
    <string name="add_new_student">Add new Student</string>
    <string name="submit_revision">Update Student</string>
    <string name="add_new_doctor">Add new Doctor</string>
    <string name="submit_doctor">Update Doctor</string>
    <string name="stu_reg_title">SCHEDULED ASSESSMENTS</string>
    <string name="reg_new">Add New Student</string>
    <string name="search_text">Search Name</string>
    <string name="search_all">Go</string>
    <string name="profileAddInfo">Add Information</string>
    <string name="add_another_parent">Add Parent</string>
    <string name="submit_treatment">Submit Treatment</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="admission_number">Admission Number</string>
    <string name="_class">Class</string>
    <string name="status">Status</string>
    <string name="section">Section</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="roll_number">Roll Number</string>
    <string name="dob">DoB</string>
    <string name="remark">Remark</string>
    <string name="edit_details">EDIT DETAILS</string>
    <string name="symptoms">Symptoms</string>
    <string name="med_suggestions">Treatment</string>
    <string name="med_body_temp">Body Temperature(Fahrenheit)</string>
    <string name="med_chief_complaint">Complaint</string>
    <string name="med_remarks">Remarks</string>
    <string name="ambulance_call">Ambulance Call</string>
    <string name="parent_call">Parent Call</string>
    <string name="details">Details >></string>
    <string name="hsg_id">HSG ID:</string>
    <string name="tab_add_no">Ad. No.  : </string>
    <string name="title_activity_madical">MadicalActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="reg_name">Name</string>
    <string name="reg_gender_male">Male</string>
    <string name="reg_gender_female">Female</string>
    <string name="reg_gender_tg">TG</string>
    <string name="reg_dob">Date Of Birth</string>
    <string name="reg_class">Class</string>
    <string name="reg_section">Section</string>
    <string name="reg_parent">Add Parent</string>
    <string name="reg_parent_detail">Parent Details</string>
    <string name="reg_save">Add</string>
    <string name="call_ambulance">Call an Ambulance</string>
    <string name="call_parent">Call Parent</string>
    <string name="call_doctor">Call a Doctor</string>
    <string name="call_hsg">Call HSG Support Team</string>
    <string name="tab_ongoing">Ongoing</string>
    <string name="tab_scheduled">Scheduled</string>
    <string name="collen">:</string>
    <string name="add_parent_info">Add Parent information</string>
    <string name="parent_name">Name</string>
    <string name="parent_email">Email</string>
    <string name="parent_contact_number">Contact</string>
    <string name="parent_relation">Relationship</string>
    <string name="academic_info">Basic Information</string>
    <string name="parent_info">Parent Information</string>
    <string name="med_info">Medical Information</string>
    <string name="med_info_add">Add Medical Information</string>
    <string name="med_info_blood">Blood Group</string>
    <string name="med_info_food">Food Allergy</string>
    <string name="med_info_medicine">Medicine Allergy</string>
    <string name="med_info_remarks">Remarks</string>
    <string name="setting_title">Settings</string>
    <string name="assessment_ent">ENT</string>
    <string name="assessment_dental">DENTAL</string>
    <string name="assessment_eye">EYE</string>
    <string name="assessment_physician">PHYSICAL</string>
    <string name="assessment_growth">GROWTH</string>
    <string name="review">Review</string>
    <string name="remarks">ADD REMARK</string>
    <string name="absent">MARK ABSENT</string>
    <string name="start_assessment">START ASSESSMENT</string>
    <string name="doctor_title">Doctors</string>
    <string name="add_more_doctor">Add More Doctors</string>
    <string name="add_doctor">Add A New Doctors</string>
    <string name="save_doctor">Add Doctor</string>
    <string name="support_tile">Help &amp; Support</string>
    <string name="specialisation">Qualification: </string>
    <string name="speciality">Speciality</string>
    <string name="doctor_list_toolbar_title">Manage</string>
    <string name="setting_toolbar_title">Setting</string>
    <string name="organization">Organization</string>
    <string name="absentees">ABSENTEES</string>
    <string name="list">LIST</string>
    <string name="pending">PENDING</string>
    <string name="completed">COMPLETED</string>
    <string name="in_completed">UNCOMPLETED</string>
    <string name="total">TOTAL</string>
    <string name="new_reg">NEW</string>
    <string name="add_image">Add Image</string>
    <string name="send_report">Send Report to HQ</string>
    <string name="assessments">Assessments</string>
    <string name="assessments_doc">Assessments Per Doctor</string>
    <string name="assessments_hr">Assessments Per Hour</string>
    <string name="event_pic">Event Photos</string>
    <string name="pic_msg">Upload maximum 10 photos of the event</string>
    <string name="colon">:</string>
    <string name="mobile_no">Mobile No</string>
    <string name="not_available">N/A</string>
    <string name="string_specialisation">Specialization</string>
    <string name="send_reviews">SEND REVIEWS</string>
    <string name="qr_code_scan_text">Scan this QR Code on Doctors app</string>
    <string name="remove">REMOVE</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="general_information">General Information</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="growth_assessment">Growth Assessment</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="murmur">Murmur</string>
    <string name="abnormal_heart_sound">Abnormal Heart Sounds</string>
    <string name="cardiovascular">Cardiovascular</string>
    <string name="respiratory">Respiratory</string>
    <string name="barky_cough">Barky Cough</string>
    <string name="dyspnea">Dyspnea</string>
    <string name="crepts">Crepts</string>
    <string name="hoarse_voice">Hoarse Voice</string>
    <string name="wheezing">Wheezing</string>
    <string name="neurological">Neurological</string>
    <string name="lethargy_sound">Lethargy Sound</string>
    <string name="slurring_speech">Slurring od Speech</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="no_students_found">No Students Found</string>
</resources>