<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/reg_button_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/card_margin"
        app:cardElevation="2dp"
        app:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:id="@+id/add_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_add_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_new"
                android:textColor="@color/colorCornFlowerBlue"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/search_text"
            android:paddingBottom="@dimen/half_side"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="40dp"
            android:paddingTop="@dimen/half_side"
            android:singleLine="true"
            android:textColorHint="@color/colorCornFlowerBlue"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/half_side"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_clear_black_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/filter_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_class"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorToolBar" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/backGround"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="@dimen/filter_height"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/filter_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/section"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorToolBar" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/backGround"/>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="@dimen/filter_height"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filters3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="16dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/filter_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/status"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorToolBar" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/backGround"/>

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="0dp"
                android:layout_height="@dimen/filter_height"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/applyFilters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rounded_edittext"
            android:layout_marginLeft="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/filter_height"
                android:gravity="center"
                android:text="@string/search_all"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorToolBar" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/countStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="7dp"
        android:textSize="16sp"
        android:textColor="@color/colorCornFlowerBlue" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:padding="4dp"
            android:clipToPadding="false" />

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_students_found"
            android:textColor="@color/colorCornFlowerBlue"
            android:textSize="16sp"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>
